--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/pybind11_vendor
-	previous = 
-	base = 7c2a8c1
+	previous = 7c2a8c1
+	base = becdabd
 	trim = 
 	trimbase = 
